@@ -1,3 +1,9 @@
+2004-09-30  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gconf/gconf-internals.c: (gconf_activate_server):
+	Fix pipe misuse reported by valgrind. Suggested fix
+	by Mark McLoughlin. Closes bug #153929.
+
 2004-09-28  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gconf/gconf-sanity-check.c: (main): Plug a leak.
